--- a/index.html
+++ b/index.html
@@ -95,7 +95,142 @@
     </div>
   </header>
   <main class="site-content">
-
+    <section class="section-articles">
+      <div class="article article-thumbnail">
+        <img class="thumbnail" src="dist/images/article-1.svg" alt="article">
+        <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
+        </h3>
+      </div>
+      <div class="article article-thumbnail">
+        <img class="thumbnail" src="dist/images/article-2.svg" alt="article">
+        <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
+        </h3>
+      </div>
+      <div class="article article-thumbnail">
+        <img class="thumbnail" src="dist/images/article-3.svg" alt="article">
+        <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
+        </h3>
+      </div>
+    </section>
+    <section class="section-tags">
+      <div class="row">
+        <div class="column large-12">
+          <div class="tags-wrapper">
+            <h6 class="tags-title">People also read:</h6>
+            <ul class="menu">
+              <li class="menu-item">
+                <a href="#" class="menu-item-link">
+                  <h6 class="heading-title heading-underline">#Eco trend setters</h6>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-item-link">
+                  <h6 class="heading-title heading-underline">#culture earth</h6>
+                </a>
+              </li>
+              <li class="menu-item">
+                <a href="#" class="menu-item-link">
+                  <h6 class="heading-title heading-underline">#ecotainment</h6>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="section-separator">
+      <div class="row">
+        <div class="column">
+          <div class="separator-line"></div>
+        </div>
+      </div>
+    </section>
+    <section class="section-posted">
+      <div class="row">
+        <div class="column large-12">
+          <div class="posted-article">
+            <div class="row">
+              <div class="column large-6">
+                <div class="article">
+                  <div class="autor-wrapper">
+                    <span class="article-author">Posted by:</span>
+                    <h5 class="autor-title heading-underline">Alexandra Gabrielle</h5>
+                  </div>
+                  <h3 class="article-title">Chernobyl: The Devastating Nuclear Disaster and Accidental Environmental
+                    Success</h3>
+                  <div class="article-exept">
+                    <p class="article-text">
+                      The world is comprised of the most amazing features that the eye can behold. This is why the
+                      window seat on any aircraft
+                      is the most sought after; because we as humans are dying to get a glimpse of the universe from the
+                      rarest angle. From
+                      shrubbery shaped like a giant pineapple to hidden messages in stadiums, drone footage has captured
+                      the most remarkable
+                      images that can only be seen from above.
+                    </p>
+                  </div>
+                  <a class="button button-underline">read more<span class="button-arrow-right"><svg width="15"
+                        height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M9.25 0.625C9.41667 0.4375 9.58333 0.4375 9.75 0.625L13.875 4.75C14.0625 4.91667 14.0625 5.08333 13.875 5.25L9.75 9.375C9.58333 9.5625 9.41667 9.5625 9.25 9.375L8.625 8.78125C8.4375 8.59375 8.4375 8.41667 8.625 8.25L11.1562 5.8125H0.375C0.125 5.8125 0 5.6875 0 5.4375V4.5625C0 4.3125 0.125 4.1875 0.375 4.1875H11.1562L8.625 1.75C8.4375 1.58333 8.4375 1.40625 8.625 1.21875L9.25 0.625Z"
+                          fill="black" />
+                      </svg>
+                    </span></a>
+                </div>
+              </div>
+              <div class="column large-6">
+                <div class="article-thumbnail">
+                  <img class="thumbnail" src="dist/images/article-4.svg" alt="article">
+                  <div class="thumbnail-border">
+                    <span class="border-piece"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="posted-article">
+            <div class="row">
+              <div class="column large-6">
+                <div class="article">
+                  <div class="autor-wrapper">
+                    <span class="article-author">Posted by:</span>
+                    <h5 class="autor-title heading-underline">Alexandra Gabrielle</h5>
+                  </div>
+                  <h3 class="article-title">A Bird’s Eye View: Breathtaking Drone Footage Revealing a Whole New World
+                  </h3>
+                  <div class="article-exept">
+                    <p class="article-text">
+                      The world is comprised of the most amazing features that the eye can behold. This is why the
+                      window seat on any aircraft
+                      is the most sought after; because we as humans are dying to get a glimpse of the universe from the
+                      rarest angle. From
+                      shrubbery shaped like a giant pineapple to hidden messages in stadiums, drone footage has captured
+                      the most remarkable
+                      images that can only be seen from above.
+                    </p>
+                  </div>
+                  <a class="button button-underline">read more<span class="button-arrow-right"><svg width="15"
+                        height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M9.25 0.625C9.41667 0.4375 9.58333 0.4375 9.75 0.625L13.875 4.75C14.0625 4.91667 14.0625 5.08333 13.875 5.25L9.75 9.375C9.58333 9.5625 9.41667 9.5625 9.25 9.375L8.625 8.78125C8.4375 8.59375 8.4375 8.41667 8.625 8.25L11.1562 5.8125H0.375C0.125 5.8125 0 5.6875 0 5.4375V4.5625C0 4.3125 0.125 4.1875 0.375 4.1875H11.1562L8.625 1.75C8.4375 1.58333 8.4375 1.40625 8.625 1.21875L9.25 0.625Z"
+                          fill="black" />
+                      </svg>
+                    </span></a>
+                </div>
+              </div>
+              <div class="column large-6">
+                <div class="article-thumbnail">
+                  <img class="thumbnail" src="dist/images/article-5.svg" alt="article">
+                  <div class="thumbnail-border">
+                    <span class="border-piece"></span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
   <script src="dist/scripts/bundle.min.js"></script>
