--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <header class="site-header">
     <div class="site-header-primary">
       <div class="site-header-inner">
-
         <nav class="site-navigation-primary">
           <ul class="menu">
             <li class="menu-item">
@@ -55,13 +54,11 @@
             </li>
           </ul>
         </nav>
-
         <div class="site-branding">
           <h1 class="site-title">
             <a href="#">ForWhatItsEarth</a>
           </h1>
         </div>
-
         <div class="search-wrapper">
           <input class="search-input" type="text" placeholder="Search the website">
           <div class="search-icon">
@@ -71,6 +68,14 @@
                 fill="black" />
             </svg>
           </div>
+        </div>
+
+        <div class="mobile-menu"><svg width="16" height="14" viewBox="0 0 16 14" fill="none"
+            xmlns="http://www.w3.org/2000/svg">
+            <path
+              d="M15.5391 2.25781H0.210938C0.0703125 2.25781 0 2.1875 0 2.04688V1.20312C0 1.0625 0.0703125 0.992188 0.210938 0.992188H15.5391C15.6797 0.992188 15.75 1.0625 15.75 1.20312V2.04688C15.75 2.1875 15.6797 2.25781 15.5391 2.25781ZM15.5391 7.88281H0.210938C0.0703125 7.88281 0 7.8125 0 7.67188V6.82812C0 6.6875 0.0703125 6.61719 0.210938 6.61719H15.5391C15.6797 6.61719 15.75 6.6875 15.75 6.82812V7.67188C15.75 7.8125 15.6797 7.88281 15.5391 7.88281ZM15.5391 13.5078H0.210938C0.0703125 13.5078 0 13.4375 0 13.2969V12.4531C0 12.3125 0.0703125 12.2422 0.210938 12.2422H15.5391C15.6797 12.2422 15.75 12.3125 15.75 12.4531V13.2969C15.75 13.4375 15.6797 13.5078 15.5391 13.5078Z"
+              fill="black" />
+          </svg>
         </div>
       </div>
     </div>
@@ -179,11 +184,9 @@
                 </div>
               </div>
               <div class="column large-6">
-                <div class="article-thumbnail">
+                <div class="article-thumbnail thumbnail-border">
                   <img class="thumbnail" src="dist/images/article-4.svg" alt="article">
-                  <div class="thumbnail-border">
-                    <span class="border-piece"></span>
-                  </div>
+                  <div class="border-piece"></div>
                 </div>
               </div>
             </div>
@@ -219,11 +222,47 @@
                 </div>
               </div>
               <div class="column large-6">
-                <div class="article-thumbnail">
+                <div class="article-thumbnail thumbnail-border">
                   <img class="thumbnail" src="dist/images/article-5.svg" alt="article">
-                  <div class="thumbnail-border">
-                    <span class="border-piece"></span>
+                  <div class="border-piece"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="posted-article">
+            <div class="row">
+              <div class="column large-6">
+                <div class="article">
+                  <div class="autor-wrapper">
+                    <span class="article-author">Posted by:</span>
+                    <h5 class="autor-title heading-underline">Alexandra Gabrielle</h5>
                   </div>
+                  <h3 class="article-title">A Bird’s Eye View: Breathtaking Drone Footage Revealing a Whole New World
+                  </h3>
+                  <div class="article-exept">
+                    <p class="article-text">
+                      The world is comprised of the most amazing features that the eye can behold. This is why the
+                      window seat on any aircraft
+                      is the most sought after; because we as humans are dying to get a glimpse of the universe from the
+                      rarest angle. From
+                      shrubbery shaped like a giant pineapple to hidden messages in stadiums, drone footage has captured
+                      the most remarkable
+                      images that can only be seen from above.
+                    </p>
+                  </div>
+                  <a class="button button-underline">read more<span class="button-arrow-right"><svg width="15"
+                        height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path
+                          d="M9.25 0.625C9.41667 0.4375 9.58333 0.4375 9.75 0.625L13.875 4.75C14.0625 4.91667 14.0625 5.08333 13.875 5.25L9.75 9.375C9.58333 9.5625 9.41667 9.5625 9.25 9.375L8.625 8.78125C8.4375 8.59375 8.4375 8.41667 8.625 8.25L11.1562 5.8125H0.375C0.125 5.8125 0 5.6875 0 5.4375V4.5625C0 4.3125 0.125 4.1875 0.375 4.1875H11.1562L8.625 1.75C8.4375 1.58333 8.4375 1.40625 8.625 1.21875L9.25 0.625Z"
+                          fill="black" />
+                      </svg>
+                    </span></a>
+                </div>
+              </div>
+              <div class="column large-6">
+                <div class="article-thumbnail thumbnail-border">
+                  <img class="thumbnail" src="dist/images/article-6.svg" alt="article">
+                  <div class="border-piece"></div>
                 </div>
               </div>
             </div>
