fix mobile and desktop styles for component article with modifier article-card

--- a/index.html
+++ b/index.html
@@ -101,18 +101,33 @@
   </header>
   <main class="site-content">
     <section class="section-articles">
-      <div class="article article-thumbnail">
-        <img class="thumbnail" src="dist/images/article-1.svg" alt="article">
+      <div class="article article-box article-card">
+        <div class="article-thumbnail">
+          <img class="thumbnail" src="dist/images/article-1.svg" alt="article">
+        </div>
+        <a href="#" class="article-tag">
+          <h6 class="tag-title">#Eco trend setters</h6>
+        </a>
         <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
         </h3>
       </div>
-      <div class="article article-thumbnail">
-        <img class="thumbnail" src="dist/images/article-2.svg" alt="article">
+      <div class="article article-box article-card">
+        <div class="article-thumbnail">
+          <img class="thumbnail" src="dist/images/article-2.svg" alt="article">
+        </div>
+        <a href="#" class="article-tag">
+          <h6 class="tag-title">#Eco trend setters</h6>
+        </a>
         <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
         </h3>
       </div>
-      <div class="article article-thumbnail">
-        <img class="thumbnail" src="dist/images/article-3.svg" alt="article">
+      <div class="article article-box article-card">
+        <div class="article-thumbnail">
+          <img class="thumbnail" src="dist/images/article-3.svg" alt="article">
+        </div>
+        <a href="#" class="article-tag">
+          <h6 class="tag-title">#Eco trend setters</h6>
+        </a>
         <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
         </h3>
       </div>
@@ -261,7 +276,7 @@
               </div>
               <div class="column large-6">
                 <div class="article-thumbnail thumbnail-border">
-                  <img class="thumbnail" src="dist/images/article-6.svg" alt="article">
+                  <img class="thumbnail" src="dist/images/article-5.svg" alt="article">
                   <div class="border-piece"></div>
                 </div>
               </div>
