--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         <div class="article-thumbnail">
           <img class="thumbnail" src="dist/images/article-1.svg" alt="article">
         </div>
-        <a href="#" class="article-tag">
+        <a href="#" class="article-tag article-tag-dark-mode">
           <h6 class="tag-title">#Eco trend setters</h6>
         </a>
         <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
@@ -115,7 +115,7 @@
         <div class="article-thumbnail">
           <img class="thumbnail" src="dist/images/article-2.svg" alt="article">
         </div>
-        <a href="#" class="article-tag">
+        <a href="#" class="article-tag article-tag-dark-mode">
           <h6 class="tag-title">#Eco trend setters</h6>
         </a>
         <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
@@ -125,7 +125,7 @@
         <div class="article-thumbnail">
           <img class="thumbnail" src="dist/images/article-3.svg" alt="article">
         </div>
-        <a href="#" class="article-tag">
+        <a href="#" class="article-tag article-tag-dark-mode">
           <h6 class="tag-title">#Eco trend setters</h6>
         </a>
         <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
@@ -176,6 +176,9 @@
                     <span class="article-author">Posted by:</span>
                     <h5 class="autor-title heading-underline">Alexandra Gabrielle</h5>
                   </div>
+                  <a href="#" class="article-tag article-tag-white-mode">
+                    <h6 class="tag-title">#Eco trend setters</h6>
+                  </a>
                   <h3 class="article-title">Chernobyl: The Devastating Nuclear Disaster and Accidental Environmental
                     Success</h3>
                   <div class="article-exept">
@@ -189,8 +192,8 @@
                       images that can only be seen from above.
                     </p>
                   </div>
-                  <a class="button button-underline">read more<span class="button-arrow-right"><svg width="15"
-                        height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <a class="button button-underline article-button">read more<span class="button-arrow-right"><svg
+                        width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                           d="M9.25 0.625C9.41667 0.4375 9.58333 0.4375 9.75 0.625L13.875 4.75C14.0625 4.91667 14.0625 5.08333 13.875 5.25L9.75 9.375C9.58333 9.5625 9.41667 9.5625 9.25 9.375L8.625 8.78125C8.4375 8.59375 8.4375 8.41667 8.625 8.25L11.1562 5.8125H0.375C0.125 5.8125 0 5.6875 0 5.4375V4.5625C0 4.3125 0.125 4.1875 0.375 4.1875H11.1562L8.625 1.75C8.4375 1.58333 8.4375 1.40625 8.625 1.21875L9.25 0.625Z"
                           fill="black" />
@@ -214,6 +217,9 @@
                     <span class="article-author">Posted by:</span>
                     <h5 class="autor-title heading-underline">Alexandra Gabrielle</h5>
                   </div>
+                  <a href="#" class="article-tag article-tag-white-mode">
+                    <h6 class="tag-title">#Eco trend setters</h6>
+                  </a>
                   <h3 class="article-title">A Bird’s Eye View: Breathtaking Drone Footage Revealing a Whole New World
                   </h3>
                   <div class="article-exept">
@@ -227,8 +233,8 @@
                       images that can only be seen from above.
                     </p>
                   </div>
-                  <a class="button button-underline">read more<span class="button-arrow-right"><svg width="15"
-                        height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <a class="button button-underline article-button">read more<span class="button-arrow-right"><svg
+                        width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                           d="M9.25 0.625C9.41667 0.4375 9.58333 0.4375 9.75 0.625L13.875 4.75C14.0625 4.91667 14.0625 5.08333 13.875 5.25L9.75 9.375C9.58333 9.5625 9.41667 9.5625 9.25 9.375L8.625 8.78125C8.4375 8.59375 8.4375 8.41667 8.625 8.25L11.1562 5.8125H0.375C0.125 5.8125 0 5.6875 0 5.4375V4.5625C0 4.3125 0.125 4.1875 0.375 4.1875H11.1562L8.625 1.75C8.4375 1.58333 8.4375 1.40625 8.625 1.21875L9.25 0.625Z"
                           fill="black" />
@@ -252,6 +258,9 @@
                     <span class="article-author">Posted by:</span>
                     <h5 class="autor-title heading-underline">Alexandra Gabrielle</h5>
                   </div>
+                  <a href="#" class="article-tag article-tag-white-mode">
+                    <h6 class="tag-title">#Eco trend setters</h6>
+                  </a>
                   <h3 class="article-title">A Bird’s Eye View: Breathtaking Drone Footage Revealing a Whole New World
                   </h3>
                   <div class="article-exept">
@@ -265,8 +274,8 @@
                       images that can only be seen from above.
                     </p>
                   </div>
-                  <a class="button button-underline">read more<span class="button-arrow-right"><svg width="15"
-                        height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <a class="button button-underline article-button">read more<span class="button-arrow-right"><svg
+                        width="15" height="10" viewBox="0 0 15 10" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path
                           d="M9.25 0.625C9.41667 0.4375 9.58333 0.4375 9.75 0.625L13.875 4.75C14.0625 4.91667 14.0625 5.08333 13.875 5.25L9.75 9.375C9.58333 9.5625 9.41667 9.5625 9.25 9.375L8.625 8.78125C8.4375 8.59375 8.4375 8.41667 8.625 8.25L11.1562 5.8125H0.375C0.125 5.8125 0 5.6875 0 5.4375V4.5625C0 4.3125 0.125 4.1875 0.375 4.1875H11.1562L8.625 1.75C8.4375 1.58333 8.4375 1.40625 8.625 1.21875L9.25 0.625Z"
                           fill="black" />
