--- a/index.html
+++ b/index.html
@@ -170,6 +170,15 @@
         <div class="column large-12">
           <div class="posted-article">
             <div class="row">
+              <div class="column small-12">
+                <div class="article-categorie">
+                  <div class="categorie-wrapper">
+                    <h6 class="categorie-title">popular</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="row">
               <div class="column large-6">
                 <div class="article">
                   <div class="autor-wrapper">
