fix styles after demo

--- a/index.html
+++ b/index.html
@@ -96,40 +96,49 @@
                 science and tech</a>
             </li>
           </ul>
+        </nav>
       </div>
     </div>
   </header>
   <main class="site-content">
     <section class="section-articles">
-      <div class="article article-box article-card">
+      <div class="article article-box article-card article-dark-mode">
         <div class="article-thumbnail">
           <img class="thumbnail" src="dist/images/article-1.svg" alt="article">
         </div>
-        <a href="#" class="article-tag article-tag-dark-mode">
-          <h6 class="tag-title">#Eco trend setters</h6>
-        </a>
-        <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
-        </h3>
+        <div class="article-meta">
+          <a href="#" class="meta-tag">#Eco trend setters
+          </a>
+        </div>
+        <div class="article-title-wrapper">
+          <h3 class="article-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
+          </h3>
+        </div>
       </div>
-      <div class="article article-box article-card">
+      <div class="article article-box article-card article-dark-mode">
         <div class="article-thumbnail">
           <img class="thumbnail" src="dist/images/article-2.svg" alt="article">
         </div>
-        <a href="#" class="article-tag article-tag-dark-mode">
-          <h6 class="tag-title">#Eco trend setters</h6>
-        </a>
-        <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
-        </h3>
+        <div class="article-meta">
+          <a href="#" class="meta-tag">#Eco trend setters
+          </a>
+        </div>
+        <div class="article-title-wrapper">
+          <h3 class="article-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
+          </h3>
+        </div>
       </div>
-      <div class="article article-box article-card">
+      <div class="article article-box article-card article-dark-mode">
         <div class="article-thumbnail">
           <img class="thumbnail" src="dist/images/article-3.svg" alt="article">
         </div>
-        <a href="#" class="article-tag article-tag-dark-mode">
-          <h6 class="tag-title">#Eco trend setters</h6>
-        </a>
-        <h3 class="thumbnail-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
-        </h3>
+        <div class="article-meta">
+          <a href="#" class="meta-tag">#Eco trend setters</a>
+        </div>
+        <div class="article-title-wrapper">
+          <h3 class="article-title">How More and More of Hollywood’s Elite Are Doubling as Environmental Activists
+          </h3>
+        </div>
       </div>
     </section>
     <section class="section-tags">
@@ -180,14 +189,15 @@
             </div>
             <div class="row">
               <div class="column large-6">
-                <div class="article">
+                <div class="article article-white-mode">
                   <div class="autor-wrapper">
                     <span class="article-author">Posted by:</span>
                     <h5 class="autor-title heading-underline">Alexandra Gabrielle</h5>
                   </div>
-                  <a href="#" class="article-tag article-tag-white-mode">
-                    <h6 class="tag-title">#Eco trend setters</h6>
-                  </a>
+                  <div class="article-meta">
+                    <a href="#" class="meta-tag">#Eco trend setters
+                    </a>
+                  </div>
                   <h3 class="article-title">Chernobyl: The Devastating Nuclear Disaster and Accidental Environmental
                     Success</h3>
                   <div class="article-exept">
@@ -221,14 +231,15 @@
           <div class="posted-article">
             <div class="row">
               <div class="column large-6">
-                <div class="article">
+                <div class="article article-white-mode">
                   <div class="autor-wrapper">
                     <span class="article-author">Posted by:</span>
                     <h5 class="autor-title heading-underline">Alexandra Gabrielle</h5>
                   </div>
-                  <a href="#" class="article-tag article-tag-white-mode">
-                    <h6 class="tag-title">#Eco trend setters</h6>
-                  </a>
+                  <div class="article-meta">
+                    <a href="#" class="meta-tag">#Eco trend setters
+                    </a>
+                  </div>
                   <h3 class="article-title">A Bird’s Eye View: Breathtaking Drone Footage Revealing a Whole New World
                   </h3>
                   <div class="article-exept">
@@ -262,14 +273,15 @@
           <div class="posted-article">
             <div class="row">
               <div class="column large-6">
-                <div class="article">
+                <div class="article article-white-mode">
                   <div class="autor-wrapper">
                     <span class="article-author">Posted by:</span>
                     <h5 class="autor-title heading-underline">Alexandra Gabrielle</h5>
                   </div>
-                  <a href="#" class="article-tag article-tag-white-mode">
-                    <h6 class="tag-title">#Eco trend setters</h6>
-                  </a>
+                  <div class="article-meta">
+                    <a href="#" class="meta-tag">#Eco trend setters
+                    </a>
+                  </div>
                   <h3 class="article-title">A Bird’s Eye View: Breathtaking Drone Footage Revealing a Whole New World
                   </h3>
                   <div class="article-exept">
